--- a/HTMLProject_4/src/main/webapp/html/join.html
+++ b/HTMLProject_4/src/main/webapp/html/join.html
@@ -12,7 +12,7 @@
 	   
 				   <table width="600" class="table_content">
 				       <tr height="30">
-						   <th width="15%" align="right">ID</th>
+						   <th width="15%" align="right" id="a">ID</th>
 						   <td width="90%">
 							   <input type="text" size="15" readonly>
 							   <input type="button" value="중복체크">
