--- a/HTMLCSSProject_4/src/main/webapp/html/html_170_3.html
+++ b/HTMLCSSProject_4/src/main/webapp/html/html_170_3.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link href="https://fonts.googleapis.com/css?family=Gamja+Flower:400" rel="stylesheet">
+
 <style>
+	*{
+		font-family: Gamja+Flower;
+	}
 	div{
 		width: 200px;
 		height: 200px;
