--- a/HTMLCSSProject_5/src/main/webapp/html/html_185_1.html
+++ b/HTMLCSSProject_5/src/main/webapp/html/html_185_1.html
@@ -4,7 +4,42 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="table.css">
-<style>
+<!-- jQuery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+    <!-- iamport.payment.js -->
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
+    <script>
+        var IMP = window.IMP; 
+        IMP.init("imp68206770"); 
+        
+        function requestPay() {
+            IMP.request_pay({
+                pg: "html5_inicis",
+                pay_method: "card",
+                merchant_uid: "ORD20180131-0000011",   // 주문번호
+                name: $('#title').text(),
+                amount: $('#price').attr('data-value'),                         // 숫자 타입
+                buyer_email: "gildong@gmail.com",
+                buyer_name: "홍길동",
+                buyer_tel: "010-4242-4242",
+                buyer_addr: "서울특별시 강남구 신사동",
+                buyer_postcode: "01181"
+            }, function (rsp) { // callback
+                $.ajax({
+                   type: 'POST',
+                   url: '/verify/' + rsp.imp_uid
+                }).done(function(data) {
+                    if(rsp.paid_amount === data.response.amount){
+                        alert("결제 성공");
+                    } else {
+                        alert("결제 실패");
+                    }
+                });
+            });
+        }
+        
+    </script>
+   <style>
 	.table_content{
 		margin:0px auto;
 	}
@@ -48,6 +83,27 @@
 		width: 100%;
 		height: 40px;
 	}
+	#cart,#buy{
+		width: 250px;
+		height: 70px;
+		border: 2px green solid;
+		font-size: 20px;
+		font-weight: bold;
+		border-radius: 10px;
+		box-shadow: 5px 5px 5px #A9A9A9;
+	}
+	#cart:hover , #buy:hover{
+		cursor: pointer;
+	}
+	#cart{
+		
+		background-color: white;
+		color:green;
+	}
+	#buy{
+		background-color: green;
+		color:white;
+	}
 </style>
 </head>
 <body>
@@ -72,7 +128,8 @@
 	   <tr>
 		   <td width="60%">
 			   <span id="percent">47%</span>&nbsp;
-			   <span id="price">319,000원</span>
+			   <span id="price" data-value="319000">319,000원</span>
+			   <!--  데이터를 저장할때 속성은 사용자 정의로 가능하다 -->
 			   <p>
 				   <del id="psub">599,000원</del>
 			   </p>
@@ -109,7 +166,9 @@
 	   <tr>
 		   <td width="60%">
 			   <input type="button" value="장바구니" id="cart">
-			   <input type="button" value="바로구매" id="buy">
+			   <input type="button" value="바로구매" id="buy"
+			    onclick="requestPay()"
+			   >
 		   </td>
 	   </tr>
    </table>
